# deploko-spec

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
src/: compiled.rs  error.rs  lib.rs  parser.rs  schema.rs  validator.rs
